docroot/includes/deed4.css
/* ... */
.red #deed-head {
}

.yellow #deed-head {
}

.green #deed-head {
}

.pd #deed-head {
    height: 100px;
}

.pd-grey #deed-head {
}

#deed-main {
    background-color: #E9E9E9;
    text-align: left;
}

body.rtl #deed-main {
    text-align: right;
}

.pd #deed-main {
    border-color: #bbc0ab;
}

#deed-main a.inline-help,
#deed-main a.helpLink {
    text-decoration: none;
    font-weight: inherit;
    border-bottom: 1px dashed #888;
    cursor: help;
}

#deed-main-content {
    position: relative;
    margin: 0 15px;
}

#deed-license {
    text-align:center;
    margin-top: 0px;
    margin-bottom: 40px;
    font-weight: bold;
    color: #fff;
}
#deed-license h2 {
    margin: 0;
    font-size: 2em;
    padding-top: 40px;
    line-height: 1.1;
}

/* Desktop small and smaller */
@media only screen and (max-width : 992px) {
  #deed-license h2 {
    font-size: 1.8em;
  }
}


.pd #deed-license {
    position: relative;
    height: 100px;
}

.pd #deed-license h2 {
    position: absolute;
    bottom: 20px;
    color: #333;
    font-size: 2em;
    text-shadow: 0 1px 0 #fff;
    line-height: 1.2;
    margin: 0;
    padding: 0;
    width: 100%;
}

#deed-main img {
    margin-bottom:  5px;
}

#deed-disclaimer {
    margin: 5px auto 0;
    text-align: center;
}

#deed-disclaimer .summary {
}
#deed-disclaimer a {
  font-weight: normal;
}

#deed-rights {
    padding: 0;
}

@media only screen and (max-width : 710px) {

}

#deed-conditions {
    padding: 0;
}

#deed-conditions ul {
}

#deed-conditions ul li ul {
    margin-top: 8px;
}

#deed-understanding {
    padding: 0;
    margin-top: 0px;
    margin-bottom: 33px;
}

.pd #deed-understanding {
    padding-left: 10px;
}
.pd #deed-understanding ul {
    padding-left: 0;
}
.pd #deed-understanding ul ul {
    margin-left: 100px;
}

#deed-understanding li.license {
    padding-left:0px;
}
#deed-understanding-zero {
    /*			padding: 0 10px;*/
    margin-top: -20px;
    margin-bottom: 0px;
}
#deed-understanding ul, #deed-understanding-zero ul {
    list-style-image:none;
    list-style-position:outside;
    list-style-type:none;
}

#deed-understanding ul ul, #deed-understanding-zero ul ul {
    list-style-type:disc;
    margin-top:1em;
}

#deed-conditions div.fineprint {
    padding: 15px;
    border: 1px solid #ddd;
    color: #111;
    font-size: 0.92em;
}
#deed-conditions-no-icons li.license {
  padding-left:0px;
}
ul.license-properties {
  margin-right: 1em;
}

#deed-conditions-no-icons,
#license-freedoms-no-icons {
  margin-right: 1em;
}

#license-freedoms-no-icons li.license {
    padding-left:0px;
}

#deed-foot {
    position: relative;
    padding: 10px 0;
    margin: 0 auto;
    color: #fff;
    text-align: left;
}

body.rtl #deed-foot {
    text-align: right;
}

.pd #deed-foot {
    color: #333;
    overflow-y: inherit;
}

#deed-foot p {
    margin: 0 20px;
    padding: 0;
}

hr {
  background: #ffffff;
  margin-bottom: 0px;
  margin-top: 18px;
}

a {
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

.pd a {
    color: #4A4902;
}

.pd #deed-foot {
    height: 70px;
}

.pd-grey #deed-foot {
}

#disclaimer {
    float: right;
    padding-right: 15px;
    padding-left: 20px;
}

li strong {
    color: #222;
}
li {
    margin-bottom: 8px;
}

ul.license-properties {
    list-style-image: none;
    list-style-position: outside;
    list-style-type: none;
}
li.license {
    list-style: none;
    padding-top: 5px;
}

ul.understanding li.license {
    min-height: inherit;
    padding-bottom: 15px;
}

li.license ul.license-properties {
    padding-left: 0;
}

li.license p {
    margin: 0;
    padding: 0;
}
li.license-hidden {
    list-style: none;
}

li.free {
    background: url("http://mirrors.creativecommons.org/tmp/freedomdefined-50x50.png") 0 0 no-repeat;
}

li.share, li.remix, li.commercial {
    padding-left: 0;
    padding-bottom: 0;
    min-height: 1em;
}

li.devnations {
    background: url("/images/deed/devnations.png") 0 0 no-repeat;
}

li.no-endorse{
    background: url("/images/deed/no-endorse.png") 0 0 no-repeat;
}

li.by::before,
li.nc::before,
li.nc-jp::before,
li.nc-eu::before,
li.nd::before,
li.sa::before {
    margin-left: -100px;
    background-image: url('/images/deed/attribution_icon_blue_x2.png');
    background-size: 61px 61px;
    display: inline-block;
    width: 61px;
    height: 61px;
    content:"";
}

li.nc {
  min-height: 70px;
}

body.rtl li.by::before,
body.rtl li.nc::before,
body.rtl li.nc-jp::before,
body.rtl li.nc-eu::before,
body.rtl li.nd::before,
body.rtl li.sa::before {
    margin-right: -100px;
}

li.nc::before {
    background-image: url('/images/deed/nc_blue_x2.png');
}
li.nc-jp::before {
    background-image: url('/images/deed/nc-eu_blue_x2.png');
}
li.nc-eu::before {
    background-image: url('/images/deed/nc-eu_blue_x2.png');
}
li.nd::before {
    background-image: url('/images/deed/nd_blue_x2.png');
}
li.sa::before {
    background-image: url('/images/deed/sa_blue_x2.png');
}

li.by > p,
li.nc > p,
li.nc-jp > p,
li.nc-eu > p,
li.nd > p,
li.sa > p {
  /* FIXME: This is incredibly brittle */
  margin-top: -61px;
}

/* Desktop small and smaller */
@media only screen and (max-width : 992px) {
  li.by::before,
  li.nc::before,
  li.nc-jp::before,
  li.nc-eu::before,
  li.nd::before,
  li.sa::before {
    margin-left: -80px;
  }
  body.rtl li.by::before,
  body.rtl li.nc::before,
  body.rtl li.nc-jp::before,
  body.rtl li.nc-eu::before,
  body.rtl li.nd::before,
  body.rtl li.sa::before {
      margin-right: -80px;
  }
  li.by,
  li.nc,
  li.nc-jp,
  li.nc-eu,
  li.nd,
  li.sa {
    padding-left: 70px;
  }
  li.nc {
    min-height: 70px;
  }

  body.rtl li.by,
  body.rtl li.nc,
  body.rtl li.nc-jp,
  body.rtl li.nc-eu,
  body.rtl li.nd,
  body.rtl li.sa {
    padding-right: 70px;
  }
}
/* ... */

